tests/should_fail/syntax_if_non_bool_cond.nv
module main

// SHOULD FAIL: if-statement condition is not Bool (it is Int)
fn test(x: Int) {
    if x {
        println("yes")
    }
}
test(1)
